versioned_docs/version-4.2/server/extensions/refresh.mdx
---
title: "Document Refresh"
sidebar_label: Document Refresh
sidebar_position: 1
---

import Admonition from '@theme/Admonition';
import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';
import CodeBlock from '@theme/CodeBlock';
import LanguageSwitcher from "@site/src/components/LanguageSwitcher";
import LanguageContent from "@site/src/components/LanguageContent";

# Document Refresh
<Admonition type="note" title="">

* The Refresh feature causes a document's [change vector](../../server/clustering/replication/change-vector.mdx) 
to increment. This causes it to be re-indexed, as well as activates other features 
that react to document updates.  

* Refresh is scheduled using the `@refresh` flag in a document's [metadata](../../client-api/session/how-to/get-and-modify-entity-metadata.mdx).  

* In this page:  
  * [Overview](../../server/extensions/refresh.mdx#overview)  
  * [Syntax](../../server/extensions/refresh.mdx#syntax)  
  * [Examples](../../server/extensions/refresh.mdx#examples)  

</Admonition>
## Overview

To refresh a document, add a `@refresh` flag to a document's metadata with a value of 
type `DateTime` (this must be in UTC format, i.e. `DateTime.UtcNow`). This specifies 
when the document should be refreshed.  

This will cause the document to refresh **_only once_**! The refresh operation removes 
the `@refresh` flag.  

The exact time that the document refreshes is not determined by the value of `@refresh` 
- rather, the server refreshes documents at regular intervals determined by the Refresh 
Configuration. The default interval is 60 seconds.  

Refreshing a document causes its [change vector](../../server/clustering/replication/change-vector.mdx) 
to increment the same way it would after any other kind of update to the document. 
This triggers any features that react to documents updating, including but not limited 
to:  

* The document is re-indexed by any indexes that cover it.  
* [Replication](../../server/ongoing-tasks/external-replication.mdx), 
[Subscriptions](../../client-api/data-subscriptions/what-are-data-subscriptions.mdx), 
and [ETL](../../server/ongoing-tasks/etl/basics.mdx) are triggered.  
* A [revision](../../server/extensions/revisions.mdx) of the document is created.  



## Syntax

To activate and/or configure document refreshing, the server needs to be sent a 
`RefreshConfiguration` object using a `ConfigureRefreshOperation` operation.  


#### RefreshConfiguration Object

<TabItem value="refresh_config" label="refresh_config">
<CodeBlock language="csharp">
{`public class RefreshConfiguration
\{
    // Set 'Disabled' to false to enable the refresh feature
    public bool Disabled \{ get; set; \}

    // How frequently to process documents with a @refresh flag
    public long? RefreshFrequencyInSec \{ get; set; \}

    // How many items to refresh (each time the refresh task is invoked)
    public long? MaxItemsToProcess \{ get; set; \}
\}
`}
</CodeBlock>
</TabItem>

| Parameter | Type | Description |
| - | - | - |
| **Disabled** | `bool` | If set to true, document refreshing is disabled for the entire database. Default: `true` |
| **RefreshFrequencyInSec** | `long` | Determines how often the server checks for documents that need to be refreshed. Default: `60` |


#### Studio

Alternatively, document refreshing can also be configured in the studio, under **Settings &gt; Document Refresh**.

![NoSQL DB Server - Document Refresh](./assets/StudioRefresh.png)



## Examples

#### Example I  

How to set refresh configuration for a database:  

<TabItem value="refresh_0" label="refresh_0">
<CodeBlock language="csharp">
{`var refreshConfig = new RefreshConfiguration \{
    Disabled = false, 
    RefreshFrequencyInSec = 300,
    MaxItemsToProcess = 1000 
\};

var result = documentStore.Maintenance.Send(new ConfigureRefreshOperation(refreshConfig));
`}
</CodeBlock>
</TabItem>  

This activates document refreshing and sets the interval at 5 minutes.  


#### Example II  

How to set a document to refresh 1 hour from now:  

<TabItem value="refresh_1" label="refresh_1">
<CodeBlock language="csharp">
{`using (var session = documentStore.OpenSession())
\{
    var document = session.Load<object>("users/1-A");

    session.Advanced.GetMetadataFor(document)["@refresh"] = DateTime.UtcNow.AddHours(1);

    session.SaveChanges();
\}
`}
</CodeBlock>
</TabItem>  



